<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/icon_map"
        android:title="@string/action_map"
        app:showAsAction="always"
        android:orderInCategory="1"/>

    <item android:id="@+id/action_add_property"
        android:icon="@drawable/icon_add"
        android:title="@string/action_add_property"
        app:showAsAction="always"
        android:orderInCategory="2"/>

    <item android:id="@+id/action_settings"
        android:icon="@drawable/icon_three_vertical_dots"
        android:title="@string/action_show_settings"
        app:showAsAction="always"
        android:orderInCategory="3"/>

</menu>