<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryPurple"
    tools:context=".fragments.FormFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_property_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_border"
                    android:drawableStart="@drawable/icon_house"
                    android:drawablePadding="10dp"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="15dp"
                    android:text="@string/add_property_type"
                    android:textAllCaps="false"
                    android:textColor="@color/grayedText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/add_property_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:autofillHints="input"
                    android:background="@drawable/bottom_border"
                    android:drawableStart="@drawable/icon_euro"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:hint="@string/add_property_price"
                    android:inputType="numberDecimal"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grayedText"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_property_surface"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:autofillHints="input"
                    android:background="@drawable/bottom_border"
                    android:drawableStart="@drawable/icon_surface"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:hint="@string/add_property_surface"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grayedText"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/add_property_rooms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:autofillHints="input"
                    android:background="@drawable/bottom_border"
                    android:drawableStart="@drawable/icon_bed"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:hint="@string/add_property_rooms"
                    android:inputType="number"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grayedText"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/add_property_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bottom_border"
                android:drawableStart="@drawable/icon_photo"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/add_property_photos"
                android:textAllCaps="false"
                android:textColor="@color/grayedText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/selected_photos_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" />

            <EditText
                android:id="@+id/add_property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="input"
                android:background="@drawable/bottom_border"
                android:drawableStart="@drawable/icon_address"
                android:gravity="center"
                android:hint="@string/add_property_address"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grayedText"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_property_proximity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="input"
                android:background="@drawable/bottom_border"
                android:drawableStart="@drawable/icon_checklist"
                android:gravity="center"
                android:hint="@string/proximity_place"
                android:padding="15dp"
                android:textColor="@color/grayedText"
                android:textColorHint="@color/grayedText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/add_proximity_places_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:visibility="gone" />

            <EditText
                android:id="@+id/add_property_realEstate_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="input"
                android:background="@drawable/bottom_border"
                android:drawableStart="@drawable/icon_real_estate_agent"
                android:gravity="center"
                android:hint="@string/real_estate_agent"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grayedText"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_property_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bottom_border"
                android:drawableStart="@drawable/icon_desc"
                android:drawableEnd="@drawable/icon_dropdown"
                android:drawablePadding="5dp"
                android:ellipsize="marquee"
                android:gravity="center"
                android:maxLines="1"
                android:padding="15dp"
                android:text="@string/add_property_desc"
                android:textAllCaps="false"
                android:textColor="@color/grayedText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_property_desc_editText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:autofillHints="desc editText"
                android:background="@color/white"
                android:gravity="bottom"
                android:hint="@string/desc_editText"
                android:inputType="textMultiLine"
                android:maxLength="400"
                android:padding="10dp"
                android:textColor="@color/secondaryPurple"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Button
                android:id="@+id/add_property_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/icon_send"
                android:drawablePadding="28dp"
                android:padding="15dp"
                android:text="@string/add_property_btn"
                android:textAllCaps="false"
                android:textColor="@color/primaryPurple"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>